# SQLite-FileManager

./: .gitignore  CMakeLists.txt  README.md  UpgradeLog.htm  Win32Project.sln
Debug/: SQLiteFileManager.db
Win32Project/: About.cpp  EditElementDialog.cpp  EditElementDialog.h  EditGcodeDialog.cpp  EditGcodeDialog.h  EditGroupDialog.cpp  EditGroupDialog.h  Element.cpp  Element.h  Gcode.cpp  Gcode.h  Group.cpp  Group.h  SQLiteTestMainFrame.cpp  SQLiteTestMainFrame.h  SqlUnitTest.cpp  SqlUnitTest.h  Win32Project.vcxproj.filters  Win32Project2.vcxproj  wxActiveRecord.cpp  wxActiveRecord.h
Win32Project/Debug/: vc141.idb
Win32Project/Debug/SQLiteTest.tlog/: SQLiteTest.lastbuildstate  link.read.1.tlog  link.write.1.tlog
Win32Project/Release/SQLiteTest.tlog/: SQLiteTest.lastbuildstate
Win32Project/databaselayer/: .cdtbuild  .project
Win32Project/databaselayer/include/: DatabaseLayerException.h
Win32Project/databaselayer/include/wx/: event.h  setup.h
Win32Project/databaselayer/include/wx/generic/: splitter.h
Win32Project/databaselayer/lib/vc_lib/: wxbase30u_net.lib  wxbase30u_xml.lib  wxbase30ud_xml.lib  wxcode_msw28ud_databaselayer_sqlite.idb  wxjpeg.lib  wxmsw30u_gl.lib  wxmsw30u_media.lib  wxmsw30u_stc.lib  wxmsw30u_webview.lib  wxmsw30ud_gl.lib  wxmsw30ud_qa.lib  wxmsw30ud_stc.lib  wxmsw30ud_webview.lib  wxpng.lib  wxpngd.lib  wxregexu.lib  wxzlib.lib  wxzlibd.lib
Win32Project/databaselayer/sqlite/lib/: export.bat  setupvars.bat  sqlite3.lib
Win32Project/db/Gcodes/: 123992C1.txt  123992C2.txt  123992C3.txt  32102210  3210221F.txt  5253002A  6226078A  6226078B  6226078C  7217050R  7217050S  72630701  7323100A  7323100F  7325730A  7325730B  7325730C  7334023A  7334023B  7334065A  7334065B  7340005A  7340005B  7341005A  7341005B  7341005C  ALBEMOZ3  ALBEMOZ4  ALBERINI  ALBTAGL1  ALBTAGL2  BLOCLEF1  BLOCLEF2  BLOCLEF3  BLOCRIG1  BLOCRIG2  BLOCRIG3  BOCCLEVE  BOCLEVE1  CHIAFRIZ  (+24 more)
Win32Project2/: About.h  EditElementDialog.cpp  EditElementDialog.h  EditGcodeDialog.cpp  EditGcodeDialog.h  EditGroupDialog.cpp  EditGroupDialog.h  Element.cpp  Element.h  Gcode.cpp  Gcode.h  Group.cpp  Group.h  SQLiteTestApp.cpp  SQLiteTestApp.h  SQLiteTestMainFrame.cpp  SQLiteTestMainFrame.h  SearchElement.cpp  SearchElement.h  wxActiveRecord.h
Win32Project2/Debug/SQLiteTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog
Win32Project2/databaselayer/include/wx/: valgen.h
Win32Project2/wxActiveRecord/: wxActiveRecord.cpp  wxActiveRecord.h
test/: CMakeLists.txt  UnitTest.cpp
test/googletest/include/gtest/: gtest.h
